@@ -1,3 +1,8 @@
+2005-04-02  Nicolas Sceaux  <nicolas.sceaux@free.fr>
+
+	* scm/music-functions.scm (display-scheme-music): pretty printer
+	for music expressions.
+
 2005-04-02  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* buildscripts/install-info-html.sh (index_file): Fix link.
